--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+
+}
+
+javafx {
+    version = "21.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml']
 }
 
 group = 'org.uts'
